[metadata]
name = dibb
version = file: VERSION
url = https://github.com/giuse/dibb
author = Giuseppe Cuccu
author_email = giuseppe.cuccu@gmail.com
license = License :: OSI Approved :: MIT License
license_file = LICENSE.txt
description = DiBB: Distributing Black-Box optimization
long_description = file: README.md
long_description_content_type = text/markdown
keywords = black-box optimization, distributed computation

[options]
install_requires = numpy; ray[default]
packages = find:
python_requires = >=3.6

[options.packages.find]
exclude =
    tests*
    build*
    dist*
    docs*
    dibb.egg-info*

[options.extras_require]
    lmmaes = lmmaes
    cma = cma
    all = lmmaes; cma
